# goodreads

./: .travis.yml  Makefile  README.md  g.cabal  gr.cabal  package.yaml  stack.yaml
Trash/: Trash.hs
app/: Main.hs
doc/: RELEASES  USAGE
src/: Auth.hs  G.hs  GRApi.hs  Main.hs  NetImports.hs  Settings.hs  Types.hs  XML.hs
