name:                g
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/g#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author name here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

executable g
  hs-source-dirs:      src
  main-is:             Main.hs
  build-depends:       base >= 4.7 && < 5
                     , text
                     , xml-lens
                     , xml-conduit
                     , http-client-tls
                     , http-client
                     , HTTP
                     , url
                     , http-types
                     , http-conduit
                     , authenticate-oauth
                     , optparse-applicative
                     , utf8-string
                     , containers
                     , bytestring
                     , case-insensitive
                     , safe-exceptions
                     , containers
                     , app-settings
                     , text-show
                     , lens
                     , double-conversion
                     , formatting
                     , haskeline

 other-modules:       Paths_g
                    , G
                    , Types

 default-language:    Haskell2010

test-suite g-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                  
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/g
